Inital commit | fix

--- a/kpepl-master/css/theme.css
+++ b/kpepl-master/css/theme.css
@@ -470,7 +470,7 @@ section {
 		border: 0px!important;
 	}
 	.about-us{
-		margin-left: 6%;
+		margin-left: 6%!important;
     	margin-right: 6%;
 	}
 	.profile{
