--- a/kpepl-master/css/style.css
+++ b/kpepl-master/css/style.css
@@ -17,7 +17,7 @@
     position: relative;
     width: 100%;
     top: 107%;
-    background-color: #d9dcdc;
+    background-color: #aaabaf;
 }
 .profile{
 	position: absolute;
@@ -29,8 +29,10 @@
   z-index: 3;
 }
 .about-us-border{
-  border: 1px solid gray;
-  padding: 0px;
+    padding: 0px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.6);
+    background: #f3f3f3;
+    margin-top: 2em;
 }
 @media(min-width:768px) {
 		/* Dropdown Button */
@@ -91,11 +93,9 @@
 #what-we-do-wrapper
 {
   padding: 7em 0;
-  background: #222831;
-  
+  color:#222831;
 
   }
-
 .heading-section {
   padding-bottom: 1em;
   margin-bottom: 5em;
@@ -112,7 +112,7 @@
 }
 
 .services {
-  margin-bottom: 5em;
+  margin: 5em 0;
 }
 .services span {
   margin-bottom: 30px;
@@ -124,8 +124,9 @@
   color: #fcc72c;
 }
 .services h3 {
-  font-size: 20px;
-  font-weight: 400;
+  font-size: 1.8em;
+  font-weight: 500;
+  margin-top: 6%;
 }
 
 
@@ -238,7 +239,7 @@ ul {
 .font-x1 {
     font-size: 1.2rem;
 }
-.icon-style i{
+/*.icon-style i{
   font-size: 400%;
   border: 0.5px solid grey;
   border-radius: 50%;
@@ -266,8 +267,24 @@ ul {
   border-color: inherit;
     color: #FFFFFF;
     background-color: #6c7582;
-}
+}*/
 .bg-color2{
-  padding: 0 20%;
+  background-color: #586d82;
 }
-
+i.fa.icon-style2 {
+  font-size: 600%;
+    border-radius: 50%;
+    padding: 6%;
+    background-color: white;
+    color: #193756;
+}
+i.fa.icon-style2:hover{
+  background-color:#193756;
+  color: white;
+  transition: all .2s ease-in-out;
+  font-size: 700%;
+}
+.intro.about-bg{
+  background-image:radial-gradient(circle at 50% 50%,rgba(0,0,0,0.30),rgba(0,0,0,0.88)),url('../img/img2.jpg');
+  background-attachment: fixed;
+}
