--- a/kpepl-master/css/theme.css
+++ b/kpepl-master/css/theme.css
@@ -8,7 +8,7 @@ body {
 	height:100%;
 	font-family:Open Sans,"Helvetica Neue",Helvetica,Arial,sans-serif;
 	color:#fff;
-	background-color:#eee;
+	background-color:#eaeaea;
 	 font-weight:100;
 }
 html {
