--- a/kpepl-master/css/theme.css
+++ b/kpepl-master/css/theme.css
@@ -9,7 +9,7 @@ body {
 	font-family:Open Sans,"Helvetica Neue",Helvetica,Arial,sans-serif;
 	color:#fff;
 	background-color:#eaeaea;
-	 font-weight:100;
+	font-weight:100;
 }
 html {
 	width:100%;
@@ -24,6 +24,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 footer{
 	background-color: black;
+	color: white;
 }
 p {
 	margin:0 0 25px;
@@ -48,9 +49,10 @@ a:hover,a:focus {
 	text-decoration:none;
 	color:inherit;
 }
+/*
 .light {
 	font-weight:400;
-}
+} */
 .navbar-custom {
 	margin-bottom:0;
 	border-bottom:1px solid rgba(255,255,255,.3);
@@ -275,9 +277,13 @@ a:hover,a:focus {
 	color:#000;
 	background-color:#42dca3;
 }
+
+/*
 ul.banner-social-buttons {
 	margin-top:0;
 }
+
+
 @media(max-width:1199px) {
 	ul.banner-social-buttons {
 		margin-top:15px;
@@ -292,7 +298,7 @@ ul.banner-social-buttons {
 	ul.banner-social-buttons li:last-child {
 		margin-bottom:0;
 	}
-}
+} */
 footer {
 	padding:40px 0;
 	z-index:1;
@@ -328,6 +334,7 @@ img::-moz-selection {
 body {
 	webkit-tap-highlight-color:rgba(255,255,255,.2);
 }
+
 .bgblue {
 	background:#22292c;
 }
@@ -365,6 +372,7 @@ p.lead {
 img {
 	max-width:100%;
 }
+/*
 .gallery ul {
 	padding:0;
 	margin:0;
@@ -424,7 +432,7 @@ img {
 }
 .gallery ul li a:hover:after {
 	opacity:1;
-}
+} */
 section:after {
 	float:none;
 	clear:both;
@@ -434,6 +442,8 @@ section {
 	color:#333;
 	overflow:hidden;
 }
+/*
+
 .done {
 	display:none;
 }
@@ -472,6 +482,10 @@ section {
 	outline:0;
 	outline: none;
 }
+
+*/
+
+
 .dropdown-content a{
 	display: block;
 	padding-left: 25px;
