--- a/kpepl-master/css/slick-theme.css
+++ b/kpepl-master/css/slick-theme.css
@@ -67,11 +67,12 @@
 .slick-next:before
 {
     font-family: 'slick';
-    font-size: 20px;
+     
+    color: grey;
+    font-size: 50px;
+    padding: 0%;;
     line-height: 1;
-
     opacity: .75;
-    color: white;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -88,11 +89,11 @@
 }
 .slick-prev:before
 {
-    content: '←';
+    content: '<';
 }
 [dir='rtl'] .slick-prev:before
 {
-    content: '→';
+    content: '>';
 }
 
 .slick-next
@@ -106,11 +107,11 @@
 }
 .slick-next:before
 {
-    content: '→';
+    content: '>';
 }
 [dir='rtl'] .slick-next:before
 {
-    content: '←';
+    content: '<';
 }
 
 /* Dots */
