--- a/kpepl-master/css/slick.css
+++ b/kpepl-master/css/slick.css
@@ -4,6 +4,7 @@
     position: relative;
 
     display: block;
+    background-color: #fff;
     box-sizing: border-box;
 
     -webkit-user-select: none;
